# stream2blog

./: .gitignore  LICENSE  README.md
backups/: blog_api_dev_20250723T003754.708724Z.db  blog_api_dev_20250723T003800.007573Z.db
blog_api/: API_DOCS.md  README.md  TODOS.md  mix.exs
blog_api/config/: config.exs  dev.exs  runtime.exs  test.exs
blog_api/lib/: blog_api_web.ex
blog_api/lib/blog_api/: entry.ex  repo.ex  thread.ex
blog_api/lib/blog_api_web/: endpoint.ex  router.ex
blog_api/lib/blog_api_web/controllers/: admin_controller.ex  entry_controller.ex  entry_json.ex  thread_controller.ex  thread_json.ex
blog_api/priv/repo/migrations/: 20250704045729_create_threads.exs  20250704045733_create_entries.exs  20250706041552_fix_entries_foreign_key.exs  20250711185721_add_image_path_to_entries.exs
blog_api/test/blog_api_web/controllers/: entry_controller_test.exs  thread_controller_test.exs
rust_tui/: Cargo.toml  README.md  filey  vibe-coding_a_blogging_app_in_rust_and_elixir.md
rust_tui/src/: api.rs  app.rs  block_styles.rs  clipboard_manager.rs  editor_views.rs  handlers.rs  image_clip.rs  image_preview.rs  key_handler.rs  lib.rs  main.rs  models.rs  operations.rs  state.rs  text_editor.rs  thread_view.rs  ui.rs  ui_utils.rs
rust_tui/src/widgets/: confirmation_dialog.rs  mod.rs  modal.rs  status_bar.rs  text_editor_wrapper.rs
rust_tui/tests/: integration_tests.rs
